--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,29 @@
 /* ---- reset ---- */
-body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; }
-canvas{ display: block; vertical-align: bottom; }
+html, body {
+  background-color: #000;
+  height:100%;
+  margin:0;
+}
+/* canvas{ display: block; vertical-align: bottom; } */
 /* ---- particles.js container ---- */
 #particles-js
 {
   position:absolute;
   width: 100%;
   height: 100%;
-  background-color: #232741;
+  /* background-color: #232741; */
   background-image: url("");
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: 50% 50%;
+  z-index:1;
+
+}
+#bm{
+  position:absolute;
+  width: 100%;
+  height: 100%;
+  /* z-index:2; */
 }
   /* ---- stats.js ---- */
 /*
