--- a/css/style.css
+++ b/css/style.css
@@ -19,12 +19,121 @@ html, body {
   z-index:1;
 
 }
+/*------------Logo------------*/
 #bm{
   position:absolute;
   width: 100%;
   height: 100%;
+  top: -100px;
   /* z-index:2; */
 }
+#into{
+  position:absolute;
+  text-align:center;
+  border: 3px solid white;
+  top:500px;
+  z-index:2;
+}
+.block{
+  font-family: "Roboto";
+  position:absolute;
+  height: 150px;
+  width:500px;
+  margin:auto;
+  font-size:14px;
+  color: white;
+  top:2;
+  bottom:0;
+  right:0;
+  left:0;
+}
+
+
+.wrapper {
+  margin: 0px 30px;
+}
+
+a {
+  font-family: sans-serif;
+  text-transform: uppercase;
+  font-size: .7rem;
+  font-weight: bold;
+  letter-spacing: .1rem;
+  text-decoration: none;
+  padding: 10px;
+}
+
+/* UNDERLINE */
+.btn.three a {
+  background: black;
+  color: white;
+  font-size: .72rem;
+  letter-spacing: .05rem;
+  transition: all 1.1s 100ms;
+  position:absolute;
+  z-index:2;
+
+}
+
+.btn.three ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  padding: 20px 10px;
+}
+
+.btn.three li {
+  float: left;
+}
+
+.btn.three li a {
+  display: inline;
+}
+
+.btn.three {
+  transition: all 1s ease-in-out;
+}
+
+.btn.three ul li a {
+  position: relative;
+}
+
+.btn.three ul li a:after {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
+  width: 0%;
+  height: 1px;
+  background: #aaa;
+  margin-bottom: 0px;
+  color: transparent;
+  content: "";
+  visibility: hidden;
+  transition: all 1.1s 100ms;
+}
+
+.btn.three ul li a:hover:after {
+  visibility: visible;
+  width: 100%;
+  transition: all 1s;
+}
+
+.btn.three a:hover {
+  /*   background: #E5D4CE; */
+  color: white;
+  transition: all 1s;
+}
+
+.btn.three #active {
+  border: 1px solid white;
+}
+
+
   /* ---- stats.js ---- */
 /*
   .count-particles
