--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,12 @@ html, body {
 
 }
 /*------------Logo------------*/
+#logo{
+  width:80px;
+  height:80px;
+  float:left;
+  padding:20px;
+}
 #bm{
   position:absolute;
   width: 100%;
@@ -40,7 +46,6 @@ html, body {
   height: 150px;
   width:500px;
   margin:auto;
-  font-size:14px;
   color: white;
   top:2;
   bottom:0;
@@ -49,21 +54,32 @@ html, body {
 }
 
 /*------------Nav------------*/
-.wrapper{
-  margin: 0px 30px;
+/* #topbar{
+  /* margin: 0px 30px; */
   float:right;
+  top:auto;
+  display:block;
+  padding: 20px;
+} */
+#btnwrapper{
+  overflow: hidden;
 }
 a {
-  font-family: sans-serif;
+  font-family: "Roboto";
   text-transform: uppercase;
-  font-size: .7rem;
+  font-size: 100 px;
   font-weight: bold;
   letter-spacing: .1rem;
   text-decoration: none;
   padding: 10px;
 }
 
+p{
+  font-family: "Roboto";
+}
+
 /* UNDERLINE */
+
 .btn.three a {
   background: black;
   color: white;
@@ -84,7 +100,8 @@ a {
 }
 
 .btn.three li {
-  float: left;
+  float: right;
+  padding:20px;
 }
 
 .btn.three li a {
@@ -132,45 +149,92 @@ a {
 .btn.three #active {
   border: 1px solid white;
 }
+/*------------portfolio------------*/
+h2 {
+  font-size: 100px;
+  font-family: "Roboto";
+  padding: 20px 20px;
+  color: #333;
+}
 
+.button-group {
+  display: flex;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  margin: 30px auto;
+  padding: 20px;
+}
 
-  /* ---- stats.js ---- */
-/*
-  .count-particles
-  {
-    background: #000022;
-    position: absolute;
-    top: 48px;
-    left: 0;
-    width: 80px;
-    color: #13E8E9;
-    font-size: .8em;
-    text-align: left;
-    text-indent: 4px;
-    line-height: 14px;
-    padding-bottom: 2px;
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    }
-  */
-  /* .js-count-particles
-  {
-    font-size: 1.1em;
-    } */
+.btn-filter {
+  margin-right: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  min-width: 100px;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  color: #555;
+}
+.btn-filter:hover {
+  background-color: #eee;
+}
+.btn-filter.active {
+  background-color: black;
+  color: #dcf0ef;
+}
 
-  /* #stats,
-  .count-particles
-  {
-    -webkit-user-select: none;
-    margin-top: 5px;
-    margin-left: 5px;
-    }
-  #stats
-  {
-    border-radius: 3px 3px 0 0;
-    overflow: hidden;
-  }
-  .count-particles
-  {
-    border-radius: 0 0 3px 3px;
-  } */
+.wrap {
+  margin: 0 15px;
+}
+
+.grid-sizer {
+  width: 33.33333%;
+}
+
+.grid-item {
+  float: right;
+  width: 33.33333%;
+  padding: 10px 5px 0 5px;
+  background: black;
+  border: 1px solid black;
+  box-sizing: border-box;
+}
+.grid-item:hover .info-wrapper {
+  transform: translateY(0px);
+  opacity: 1;
+}
+.grid-item img {
+  width: 100%;
+}
+
+.info-wrapper {
+  position: absolute;
+  font-family: "Roboto";
+  left: 5px;
+  bottom: 0;
+  padding: 78px 16px 16px 16px;
+  box-sizing: border-box;
+  background-image: linear-gradient(-179deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.49) 98%);
+  width: calc(  100%  -  10px );
+  height: 160px;
+  opacity: 0;
+  transform: translateY(30px);
+  transition: 0.25s transform linear,0.3s opacity ease-in-out;
+}
+.info-wrapper .name {
+  color: white;
+  font-size: 20px;
+  margin-bottom: 5px;
+}
+.info-wrapper .memo {
+  color: #ddd;
+  font-size: 14px;
+  margin-bottom: 8px;
+}
+.info-wrapper .date {
+  color: white;
+  font-size: 14px;
+}
