--- a/css/style2.css
+++ b/css/style2.css
@@ -1,3 +1,5 @@
+/*This stylesheet is for all the project display*/
+
 *{
   font-family: "Roboto";
   margin: 0;
@@ -66,4 +68,136 @@ img.img_small {
   float: none;
   margin-left: 36%;
   text-align: center;
+}
+/*------------scrolling animation------------*/
+@-webkit-keyframes scroll-inner {
+  0% {
+    margin-top: 20%;
+    opacity: 1;
+  }
+  90% {
+    margin-top: 60%;
+    opacity: 0;
+  }
+  100% {
+    margin-top: 20%;
+    opacity: 0;
+  }
+}
+@keyframes scroll-inner {
+  0% {
+    margin-top: 20%;
+    opacity: 1;
+  }
+  90% {
+    margin-top: 60%;
+    opacity: 0;
+  }
+  100% {
+    margin-top: 20%;
+    opacity: 0;
+  }
+}
+.mouse-container {
+  position: relative;
+  display: block;
+  height: 100px;
+  top: 80%;
+}
+
+.mouse {
+  position: relative;
+  margin: 0 auto;
+  display: block;
+  width: 30px;
+  height: 50px;
+  border: solid 2px #fff;
+  border-radius: 20px;
+  opacity: .4;
+}
+.mouse .scroll-down {
+  display: block;
+  width: 5px;
+  height: 5px;
+  background: #fff;
+  border-radius: 50%;
+  margin: 15% auto auto auto;
+  -webkit-animation: scroll-inner 1.5s;
+  animation: scroll-inner 1.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease;
+  animation-timing-function: ease;
+}
+/*************Close icon**************/
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+ #closeicon{
+  position:sticky;
+  height: 100%;
+  top:0px;
+}
+.outer {
+  position:absolute;
+  z-index:999;
+  margin: auto;
+  width: 70px;
+  margin-top: 10px;
+  right:0px;
+  cursor: pointer;
+}
+
+.inner {
+  width: inherit;
+  text-align: center;
+}
+
+label {
+  font-size: .8em;
+  line-height: 4em;
+  text-transform: uppercase;
+  color: black;
+  transition: all .3s ease-in;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.inner:before, .inner:after {
+  position: absolute;
+  content: '';
+  height: 1px;
+  width: inherit;
+  background: black;
+  left: 0;
+  transition: all .3s ease-in;
+}
+
+.inner:before {
+  top: 50%;
+  transform: rotate(45deg);
+}
+
+.inner:after {
+  bottom: 50%;
+  transform: rotate(-45deg);
+}
+
+.outer:hover label {
+  opacity: 1;
+}
+
+.outer:hover .inner:before,
+.outer:hover .inner:after {
+  transform: rotate(0);
+}
+
+.outer:hover .inner:before {
+  top: 0;
+}
+
+.outer:hover .inner:after {
+  bottom: 0;
 }
