--- a/css/style2.css
+++ b/css/style2.css
@@ -107,7 +107,13 @@ img.img_small {
   margin: 2%;
   margin-left: 10%;
 }
-
+img.img_medium {
+  display:block;
+  width: 50%;
+  margin: 2%;
+  margin-left: auto;
+  margin-right: auto;
+}
 #content h1 {
   float: left;
   font-size: 4.5em;
@@ -126,6 +132,9 @@ img.img_small {
 .footer {
   float: none;
   margin-left: 36%;
+  text-align: center;
+}
+.caption{
   text-align: center;
 }
 /*------------scrolling animation------------*/
