--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* ---- reset ---- */
 html, body {
   background-color: #000;
+  width:100%;
   height:100%;
   margin:0;
 }
@@ -27,11 +28,18 @@ html, body {
   padding:20px;
 }
 #bm{
-  position:absolute;
   width: 100%;
   height: 100%;
-  top: -100px;
-  /* z-index:2; */
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  /* position:relative;
+  width: 100%;
+  height: 100%;
+  top: -100px; */
 }
 .block{
   font-family:'Roboto', sans-serif;
@@ -288,7 +296,21 @@ a, a:hover {
 
 @media only screen and (max-width:620px) {
   /* For mobile phones: */
-   .wrapper,.socialbtns,.block {
+   .wrapper,.socialbtns,.block,.button-group,.wrap {
     width:100%;
+  }
+  #bm{
+    zoom: 2; /* IE */
+    -moz-transform: scale(2); /* Firefox */
+    -moz-transform-origin: 0 0;
+    -o-transform: scale(2); /* Opera */
+    -o-transform-origin: 0 0;
+    -webkit-transform: scale(2); /* Safari And Chrome */
+    -webkit-transform-origin: 0 0;
+    transform: scale(2); /* Standard Property */
+    transform-origin: 0 0;  /* Standard Property */
+right:500px;
+display:block;
+bottom:500px;
   }
 }
