--- a/css/style.css
+++ b/css/style.css
@@ -296,8 +296,19 @@ a, a:hover {
 
 @media only screen and (max-width:620px) {
   /* For mobile phones: */
-   .wrapper,.socialbtns,.block,.button-group,.wrap {
+   .wrapper,.socialbtns,.block,.button-group, {
     width:100%;
+  }
+  .btn-filter {
+    margin-right: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    min-width: 50px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    color: #555;
   }
   #bm{
     zoom: 2; /* IE */
