--- a/css/style.css
+++ b/css/style.css
@@ -261,6 +261,7 @@ margin-bottom: 2em;
 }
 #AboutTextContainer{
   position: absolute;
+  font-family:'Roboto', sans-serif;
   color:white;
   z-index: 5;
   width:50%;
@@ -274,6 +275,7 @@ margin-bottom: 2em;
 #introcontainer{
   width:100%;
   text-align:center;
+  font-family:'Roboto', sans-serif;
 }
 a, a:hover {
 	text-decoration: none;
