--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ html, body {
   height:100%;
   margin:0;
 }
+*{
+  font-family: 'Roboto', sans-serif;
+  margin: 0;
+  padding: 0;
+}
 /* canvas{ display: block; vertical-align: bottom; } */
 /* ---- particles.js container ---- */
 #particles-js
@@ -36,10 +41,6 @@ html, body {
   right: 0;
   bottom: 0;
   margin: auto;
-  /*
-  width: 100%;
-  height: 100%;
-  top: -100px; */
 }
 .block{
   position: absolute;
@@ -57,15 +58,6 @@ html, body {
 
 #btnwrapper{
   overflow: hidden;
-}
-#wrapper {
-  font-family:'Roboto', sans-serif;
-  text-transform: uppercase;
-  font-size: 100 px;
-  font-weight: bold;
-  letter-spacing: .1rem;
-  text-decoration: none;
-  padding: 10px;
 }
 
 p{
@@ -346,7 +338,7 @@ a, a:hover {
 }
 
 .square {
-  font-size:100px;
+  font-size:10em;
   font-weight:500;
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
@@ -443,10 +435,13 @@ a, a:hover {
 
 /*------------For mobile phones------------*/
 @media only screen and (max-width:620px) {
-   .wrapper,.block,.button-group, {
+   .wrapper,.block,.button-group{
     width:100%;
   }
   .socialbtns{
+    width:100%;
+  }
+  .container{
     width:100%;
   }
   .btn-filter {
@@ -460,13 +455,8 @@ a, a:hover {
     background-color: transparent;
     color: #555;
   }
+  .square {
+    font-size:5em;
+}
 
-  #bm{
-    top:70%;
-  }
-  .block{
-    top:0;
-    height: 40%;
-    width:80%;
-  }
 }
