--- a/css/style.css
+++ b/css/style.css
@@ -275,6 +275,8 @@ a, a:hover {
   z-index:3;
   float:left;
   text-align: center;
+  top:90%;
+  left:20%;
 }
 .socialbtns, .socialbtns ul, .socialbtns li {
   margin: 0 auto;
@@ -428,7 +430,107 @@ a, a:hover {
     to { -webkit-transform: none; transform: none; }
 }
 
+/*---------------Download Animation------------*/
 
+
+.btn-open {
+	font-size: 1rem;
+	position: absolute;
+  z-index: 5;
+	cursor: pointer;
+	opacity: 0;
+	user-select: none;
+	visibility: hidden;
+	pointer-events: none;
+}
+.content {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+}
+.btn-download {
+	font-size: 1rem;
+	cursor: pointer;
+	border: 1px solid white;
+	background-color: #040404;
+	color: #fff;
+	display: block;
+	width: 200px;
+	height: 50px;
+	transition: all 0.3s ease;
+	transform-origin: center bottom;
+	transform: scale(1);
+	position: relative;
+	overflow: hidden;
+	outline: none;
+}
+
+.btn-download:hover {
+	background-color: #a0a0a0;
+}
+
+.btn-download:before, .btn-download:after {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+.btn-download:after {
+	background: white;
+	border-radius: 5px;
+	transform: translateX(-100%);
+}
+
+.btn-download:focus {
+	font-size: 0;
+	height: 10px;
+	border-radius: 20px;
+	background-color: black;
+	animation-name: stretch;
+	animation-delay: 1.5s;
+	animation-duration: 0.5s;
+	animation-fill-mode: forwards;
+}
+
+.btn-download:focus + .btn-open {
+	animation-name: appear;
+	animation-delay: 2s;
+	animation-duration: 0.3s;
+	animation-fill-mode: forwards;
+}
+
+.btn-download:focus:after {
+	transform: translateX(0);
+	transition: transform cubic-bezier(0.445, 0.05, 0.55, 0.95);
+	transition-delay: 1s;
+}
+
+@keyframes stretch {
+	from {
+		transform: scale(1);
+	}
+	to {
+		transform: scale(0.4);
+	}
+}
+
+@keyframes appear {
+	from {
+		opacity: 0;
+		visibility: hidden;
+		transform: translateY(0);
+	}
+	to {
+		opacity: 1;
+		visibility: visible;
+		transform: translateY(-15px);
+	}
+}
 
 
 /*------------For mobile phones------------*/
