Adding leaflet design

--- a/css/style2.css
+++ b/css/style2.css
@@ -88,6 +88,12 @@
   height: 100%;
   width: 100%;
 }
+#Leaflets{ background:url('../Projects/Leaflets/Trifold_Leaflet.jpg') no-repeat center;
+  background-size: cover;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
 #full-image h1 {
   color: white;
   font-size: 6em;
