Adding scholarship promotion design

--- a/css/style2.css
+++ b/css/style2.css
@@ -94,6 +94,12 @@
   height: 100%;
   width: 100%;
 }
+#ScholarshipPromotion{ background:url('../Projects/ScholarshipPromotion/ScholarshipPromotionPoster_3.jpg') no-repeat center;
+  background-size: cover;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
 #full-image h1 {
   color: white;
   font-size: 6em;
