Adding watercolour project

--- a/css/style2.css
+++ b/css/style2.css
@@ -106,6 +106,12 @@
   height: 100%;
   width: 100%;
 }
+#FloralWatercolour{ background:url('../Projects/FloralWatercolour/FloralWatercolour_3.jpg') no-repeat center;
+  background-size: cover;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
 #full-image h1 {
   color: white;
   font-size: 6em;
