Adding Dream World AR

--- a/css/style2.css
+++ b/css/style2.css
@@ -133,6 +133,13 @@
   height: 100%;
   width: 100%;
 }
+#DreamWorld {
+  background: url("../Projects/DreamWorld/DreamWorld_L.jpg") no-repeat center;
+  background-size: cover;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+}
 #full-image h1 {
   color: white;
   font-size: 6em;
