--- a/css/style2.css
+++ b/css/style2.css
@@ -366,9 +366,7 @@ img.vjs-poster {
 }
 
 /***********Cutomize Bootstap***************/
-/* .container-fluid {
-  height: auto;
-} */
+
 #content p,
 h1,
 h2,
@@ -376,7 +374,7 @@ h3 {
   text-align: left;
   margin: auto;
   width: 80%;
-  padding: 10px;
+  padding: 3%;
 }
 #projectnormal {
   padding-top: 10%;
@@ -448,6 +446,15 @@ h2 {
   }
   .container-fluid {
     padding-top: 0;
+  }
+  #content p,
+  h1,
+  h2,
+  h3 {
+    text-align: left;
+    margin: auto;
+    width: 100%;
+    padding: 3%;
   }
 }
 /*------------For iPad------------*/
