--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,36 @@
 /* ---- reset ---- */
-html, body {
+html,
+body {
   background-color: #000;
-  font-family:'Roboto', sans-serif;
-  width:100%;
-  height:100%;
-  margin:0;
+  font-family: "Roboto", sans-serif;
+  width: 100%;
+  height: 100%;
+  margin: 0;
 }
-*{
-  font-family: 'Roboto', sans-serif;
+* {
+  font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
 }
 /* canvas{ display: block; vertical-align: bottom; } */
 /* ---- particles.js container ---- */
-#particles-js
-{
-  position:absolute;
+#particles-js {
+  position: absolute;
   width: 100%;
   height: 100%;
   background-repeat: no-repeat;
   background-size: 20%;
   background-position: 50% 50%;
-  z-index:1;
-
+  z-index: 1;
 }
 /*------------Logo------------*/
-#logo{
-  width:80px;
-  height:80px;
-  float:left;
-  padding:20px;
+#logo {
+  width: 80px;
+  height: 80px;
+  float: left;
+  padding: 20px;
 }
-#bm{
+#bm {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -42,26 +41,26 @@ html, body {
   bottom: 0;
   margin: auto;
 }
-.block{
+.block {
   position: absolute;
-  top:60%;
+  top: 60%;
   height: 80px;
-  width:50%;
-  margin:auto;
+  width: 50%;
+  margin: auto;
   color: white;
-  bottom:0;
-  right:0;
-  left:0;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 /*------------Nav------------*/
 
-#btnwrapper{
+#btnwrapper {
   overflow: hidden;
 }
 
-p{
-  font-family: 'Roboto', sans-serif;
+p {
+  font-family: "Roboto", sans-serif;
 }
 
 /* UNDERLINE */
@@ -69,16 +68,16 @@ p{
 .btn.three a {
   background: none;
   color: white;
-  font-size: .72rem;
-  letter-spacing: .05rem;
+  font-size: 0.72rem;
+  letter-spacing: 0.05rem;
   transition: all 1.1s 100ms;
-  position:absolute;
-  z-index:2;
-  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  z-index: 2;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   font-size: 100 px;
   font-weight: bold;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   text-decoration: none;
   padding: 10px;
 }
@@ -93,7 +92,7 @@ p{
 
 .btn.three li {
   float: right;
-  padding:20px;
+  padding: 20px;
 }
 
 .btn.three li a {
@@ -106,7 +105,6 @@ p{
 
 .btn.three ul li a {
   position: relative;
-
 }
 
 .btn.three ul li a:after {
@@ -144,7 +142,7 @@ p{
 /*------------portfolio------------*/
 h2 {
   font-size: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   padding: 20px 20px;
   color: #333;
 }
@@ -204,17 +202,21 @@ h2 {
 
 .info-wrapper {
   position: absolute;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   left: 5px;
   bottom: 0;
   padding: 78px 16px 16px 16px;
   box-sizing: border-box;
-  background-image: linear-gradient(-179deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.49) 98%);
-  width: calc(  100%  -  10px );
+  background-image: linear-gradient(
+    -179deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0.49) 98%
+  );
+  width: calc(100% - 10px);
   height: 160px;
   opacity: 0;
   transform: translateY(30px);
-  transition: 0.25s transform linear,0.3s opacity ease-in-out;
+  transition: 0.25s transform linear, 0.3s opacity ease-in-out;
 }
 .info-wrapper .name {
   color: white;
@@ -231,321 +233,431 @@ h2 {
   font-size: 0.8vw;
 }
 /*------------social media icons------------*/
-#img_yiyi{
-  position:absolute;
-  z-index:4;
-  width:50%;
-  height:auto;
+#img_yiyi {
+  position: absolute;
+  z-index: 4;
+  width: 50%;
+  height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.About{
+.About {
   font-size: 1em;
   /* height: 150px; */
   padding-right: 10%;
   margin-top: 2.5em;
   margin-bottom: 2em;
 }
-#AboutContainer{
+#AboutContainer {
   margin-top: 5%;
 }
-#AboutTextContainer{
+#AboutTextContainer {
   position: absolute;
-  font-family:'Roboto', sans-serif;
-  color:white;
+  font-family: "Roboto", sans-serif;
+  color: white;
   z-index: 5;
-  width:50%;
-  left:50%;
+  width: 50%;
+  left: 50%;
   text-align: left;
   line-height: 200%;
-  margin:0, auto;
+  margin: 0, auto;
   padding-left: 3%;
 }
-#introcontainer{
-  width:100%;
-  text-align:center;
-  font-family:'Roboto', sans-serif;
-}
-a, a:hover {
-	text-decoration: none;
-}
-#icons{
-  position:absolute;
-  z-index:3;
-  float:left;
+#introcontainer {
+  width: 100%;
   text-align: center;
-  top:90%;
-  left:20%;
+  font-family: "Roboto", sans-serif;
 }
-.socialbtns, .socialbtns ul, .socialbtns li {
+a,
+a:hover {
+  text-decoration: none;
+}
+#icons {
+  position: absolute;
+  z-index: 3;
+  float: left;
+  text-align: center;
+  top: 90%;
+  left: 20%;
+}
+.socialbtns,
+.socialbtns ul,
+.socialbtns li {
   margin: 0 auto;
   padding: 5px;
   padding-left: 0;
 }
 
 .socialbtns li {
-    list-style: none outside none;
-    display: inline-block;
+  list-style: none outside none;
+  display: inline-block;
 }
 
 .socialbtns .fa {
-	width: 40px;
+  width: 40px;
   height: 28px;
-	color: #000;
-	background-color: #FFF;
-	border: 1px solid #000;
-	padding-top: 12px;
-	border-radius: 22px;
-	-moz-border-radius: 22px;
-	-webkit-border-radius: 22px;
-	-o-border-radius: 22px;
+  color: #000;
+  background-color: #fff;
+  border: 1px solid #000;
+  padding-top: 12px;
+  border-radius: 22px;
+  -moz-border-radius: 22px;
+  -webkit-border-radius: 22px;
+  -o-border-radius: 22px;
 }
 
 .socialbtns .fa:hover {
-	color: #FFF;
-	background-color: #000;
-	border: 1px solid white;
+  color: #fff;
+  background-color: #000;
+  border: 1px solid white;
 }
-.footer{
+.footer {
   position: fixed;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
-  color:grey;
+  color: grey;
   text-align: center;
   z-index: 3;
 }
 /*------------Name Animation------------*/
 
 .container {
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-  width:100vw;
-  max-width:100%;
-  height:80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+  max-width: 100%;
+  height: 80vh;
 }
 
-
 .line {
-  display:flex;
-  position:relative;
-  z-index:3;
+  display: flex;
+  position: relative;
+  z-index: 3;
 }
 
 .square {
-  font-size:10em;
-  font-weight:500;
+  font-size: 10em;
+  font-weight: 500;
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
-  cursor:default;
-  transition:all 0.3s;
-  color:rgba(164,75,249,0.1);
+  cursor: default;
+  transition: all 0.3s;
+  color: rgba(164, 75, 249, 0.1);
 }
 
 .square:hover {
-  color:#FF00C3;
+  color: #ff00c3;
 }
 
 @-webkit-keyframes rubberBand {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1);
   }
   30% {
-    -webkit-transform: scale3d(1.25, .75, 1);
-    transform: scale3d(1.25, .75, 1)
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
   }
   40% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1)
+    transform: scale3d(0.75, 1.25, 1);
   }
   50% {
-    -webkit-transform: scale3d(1.15, .85, 1);
-    transform: scale3d(1.15, .85, 1)
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
   }
   65% {
-    -webkit-transform: scale3d(.95, 1.05, 1);
-    transform: scale3d(.95, 1.05, 1)
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   75% {
-    -webkit-transform: scale3d(1.05, .95, 1);
-    transform: scale3d(1.05, .95, 1)
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1);
   }
 }
 @keyframes rubberBand {
   0% {
     -webkit-transform: scale3d(1, 1, 1);
     -ms-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1);
   }
   30% {
-    -webkit-transform: scale3d(1.25, .75, 1);
-    -ms-transform: scale3d(1.25, .75, 1);
-    transform: scale3d(1.25, .75, 1)
+    -webkit-transform: scale3d(1.25, 0.75, 1);
+    -ms-transform: scale3d(1.25, 0.75, 1);
+    transform: scale3d(1.25, 0.75, 1);
   }
   40% {
     -webkit-transform: scale3d(0.75, 1.25, 1);
     -ms-transform: scale3d(0.75, 1.25, 1);
-    transform: scale3d(0.75, 1.25, 1)
+    transform: scale3d(0.75, 1.25, 1);
   }
   50% {
-    -webkit-transform: scale3d(1.15, .85, 1);
-    -ms-transform: scale3d(1.15, .85, 1);
-    transform: scale3d(1.15, .85, 1)
+    -webkit-transform: scale3d(1.15, 0.85, 1);
+    -ms-transform: scale3d(1.15, 0.85, 1);
+    transform: scale3d(1.15, 0.85, 1);
   }
   65% {
-    -webkit-transform: scale3d(.95, 1.05, 1);
-    -ms-transform: scale3d(.95, 1.05, 1);
-    transform: scale3d(.95, 1.05, 1)
+    -webkit-transform: scale3d(0.95, 1.05, 1);
+    -ms-transform: scale3d(0.95, 1.05, 1);
+    transform: scale3d(0.95, 1.05, 1);
   }
   75% {
-    -webkit-transform: scale3d(1.05, .95, 1);
-    -ms-transform: scale3d(1.05, .95, 1);
-    transform: scale3d(1.05, .95, 1)
+    -webkit-transform: scale3d(1.05, 0.95, 1);
+    -ms-transform: scale3d(1.05, 0.95, 1);
+    transform: scale3d(1.05, 0.95, 1);
   }
   100% {
     -webkit-transform: scale3d(1, 1, 1);
     -ms-transform: scale3d(1, 1, 1);
-    transform: scale3d(1, 1, 1)
+    transform: scale3d(1, 1, 1);
   }
 }
 .rubberBand {
   -webkit-animation-name: rubberBand;
-  animation-name: rubberBand
+  animation-name: rubberBand;
 }
 
-
-@keyframes movement
-{
-  from { -webkit-transform: rotate(-1turn) translateY(-50px); transform: rotate(-1turn) translateY(-50px); }
-    to { -webkit-transform: none; transform: none; }
+@keyframes movement {
+  from {
+    -webkit-transform: rotate(-1turn) translateY(-50px);
+    transform: rotate(-1turn) translateY(-50px);
+  }
+  to {
+    -webkit-transform: none;
+    transform: none;
+  }
 }
 
 /*---------------Download Animation------------*/
 
-
 .btn-open {
-	font-size: 1rem;
-	position: absolute;
+  font-size: 1rem;
+  position: absolute;
   z-index: 5;
-	cursor: pointer;
-	opacity: 0;
-	user-select: none;
-	visibility: hidden;
-	pointer-events: none;
+  cursor: pointer;
+  opacity: 0;
+  user-select: none;
+  visibility: hidden;
+  pointer-events: none;
 }
 .content {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 .btn-download {
-	font-size: 1rem;
-	cursor: pointer;
-	border: 1px solid white;
-	background-color: #040404;
-	color: #fff;
-	display: block;
-	width: 200px;
-	height: 50px;
-	transition: all 0.3s ease;
-	transform-origin: center bottom;
-	transform: scale(1);
-	position: relative;
-	overflow: hidden;
-	outline: none;
+  font-size: 1rem;
+  cursor: pointer;
+  border: 1px solid white;
+  background-color: #040404;
+  color: #fff;
+  display: block;
+  width: 200px;
+  height: 50px;
+  transition: all 0.3s ease;
+  transform-origin: center bottom;
+  transform: scale(1);
+  position: relative;
+  overflow: hidden;
+  outline: none;
 }
 
 .btn-download:hover {
-	background-color: #a0a0a0;
+  background-color: #a0a0a0;
 }
 
-.btn-download:before, .btn-download:after {
-	content: "";
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+.btn-download:before,
+.btn-download:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .btn-download:after {
-	background: white;
-	border-radius: 5px;
-	transform: translateX(-100%);
+  background: white;
+  border-radius: 5px;
+  transform: translateX(-100%);
 }
 
 .btn-download:focus {
-	font-size: 0;
-	height: 10px;
-	border-radius: 20px;
-	background-color: black;
-	animation-name: stretch;
-	animation-delay: 1.5s;
-	animation-duration: 0.5s;
-	animation-fill-mode: forwards;
+  font-size: 0;
+  height: 10px;
+  border-radius: 20px;
+  background-color: black;
+  animation-name: stretch;
+  animation-delay: 1.5s;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
 }
 
 .btn-download:focus + .btn-open {
-	animation-name: appear;
-	animation-delay: 2s;
-	animation-duration: 0.3s;
-	animation-fill-mode: forwards;
+  animation-name: appear;
+  animation-delay: 2s;
+  animation-duration: 0.3s;
+  animation-fill-mode: forwards;
 }
 
 .btn-download:focus:after {
-	transform: translateX(0);
-	transition: transform cubic-bezier(0.445, 0.05, 0.55, 0.95);
-	transition-delay: 1s;
+  transform: translateX(0);
+  transition: transform cubic-bezier(0.445, 0.05, 0.55, 0.95);
+  transition-delay: 1s;
 }
 
 @keyframes stretch {
-	from {
-		transform: scale(1);
-	}
-	to {
-		transform: scale(0.4);
-	}
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.4);
+  }
 }
 
 @keyframes appear {
-	from {
-		opacity: 0;
-		visibility: hidden;
-		transform: translateY(0);
-	}
-	to {
-		opacity: 1;
-		visibility: visible;
-		transform: translateY(-15px);
-	}
+  from {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(-15px);
+  }
+}
+/*------------Loader------------*/
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cs-loader {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
 }
 
+.cs-loader-inner {
+  transform: translateY(-50%);
+  top: 50%;
+  position: absolute;
+  width: calc(100% - 200px);
+  color: #fff;
+  padding: 0 100px;
+  text-align: center;
+}
+
+.cs-loader-inner label {
+  font-size: 20px;
+  opacity: 0;
+  display: inline-block;
+}
+
+@keyframes lol {
+  0% {
+    opacity: 0;
+    transform: translateX(-300px);
+  }
+  33% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  66% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(300px);
+  }
+}
+
+@-webkit-keyframes lol {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(-300px);
+  }
+  33% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+  }
+  66% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(300px);
+  }
+}
+
+.cs-loader-inner label:nth-child(6) {
+  -webkit-animation: lol 3s infinite ease-in-out;
+  animation: lol 3s infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(5) {
+  -webkit-animation: lol 3s 100ms infinite ease-in-out;
+  animation: lol 3s 100ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(4) {
+  -webkit-animation: lol 3s 200ms infinite ease-in-out;
+  animation: lol 3s 200ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(3) {
+  -webkit-animation: lol 3s 300ms infinite ease-in-out;
+  animation: lol 3s 300ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(2) {
+  -webkit-animation: lol 3s 400ms infinite ease-in-out;
+  animation: lol 3s 400ms infinite ease-in-out;
+}
+
+.cs-loader-inner label:nth-child(1) {
+  -webkit-animation: lol 3s 500ms infinite ease-in-out;
+  animation: lol 3s 500ms infinite ease-in-out;
+}
 
 /*------------For mobile phones------------*/
-@media only screen and (max-width:620px) {
-   .wrapper,.block,.button-group{
-    width:100%;
+@media only screen and (max-width: 620px) {
+  .wrapper,
+  .block,
+  .button-group {
+    width: 100%;
   }
-  .container{
-    width:100%;
+  .container {
+    width: 100%;
   }
   .square {
-    font-size:5em;
+    font-size: 5em;
   }
-  #logo{
-    display:none
+  #logo {
+    display: none;
   }
   .button-group {
     padding: 0;
@@ -558,23 +670,22 @@ a, a:hover {
   }
   .info-wrapper {
     padding: 78px 16px 16px 16px;
-    height:25vw;
+    height: 25vw;
   }
-  #AboutTextContainer{
-    width:100%;
-    left:0;
-    top:60%;
+  #AboutTextContainer {
+    width: 100%;
+    left: 0;
+    top: 60%;
   }
-  #img_yiyi{
-    width:100%;
+  #img_yiyi {
+    width: 100%;
   }
-  #icons{
-    position:absolute;
-    z-index:999;
+  #icons {
+    position: absolute;
+    z-index: 999;
     text-align: center;
-    width:100%;
-    top:40%;
-    left:0;
+    width: 100%;
+    top: 40%;
+    left: 0;
   }
-
 }
