--- a/css/style.css
+++ b/css/style.css
@@ -551,96 +551,60 @@ a:hover {
   justify-content: center;
   align-items: center;
 }
-.cs-loader {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+.Loader {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
+  max-width: 14.6rem;
+  margin-top: 7.3rem;
+  margin-bottom: 7.3rem;
 }
-
-.cs-loader-inner {
-  transform: translateY(-50%);
-  top: 50%;
+.Loader:before,
+.Loader:after {
+  content: "";
   position: absolute;
-  width: calc(100% - 200px);
-  color: #fff;
-  padding: 0 100px;
-  text-align: center;
+  border-radius: 50%;
+  animation-duration: 1.8s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  filter: drop-shadow(0 0 0.7555555556rem rgba(255, 255, 255, 0.75));
+}
+.Loader:before {
+  width: 100%;
+  padding-bottom: 100%;
+  box-shadow: inset 0 0 0 1.7rem #fff;
+  animation-name: pulsA;
+}
+.Loader:after {
+  width: calc(100% - 1.7rem * 2);
+  padding-bottom: calc(100% - 1.7rem * 2);
+  box-shadow: 0 0 0 0 #fff;
+  animation-name: pulsB;
 }
 
-.cs-loader-inner label {
-  font-size: 20px;
-  opacity: 0;
-  display: inline-block;
-}
-
-@keyframes lol {
+@keyframes pulsA {
   0% {
+    box-shadow: inset 0 0 0 1.7rem #fff;
+    opacity: 1;
+  }
+  50%,
+  100% {
+    box-shadow: inset 0 0 0 0 #fff;
     opacity: 0;
-    transform: translateX(-300px);
   }
-  33% {
-    opacity: 1;
-    transform: translateX(0px);
-  }
-  66% {
-    opacity: 1;
-    transform: translateX(0px);
+}
+@keyframes pulsB {
+  0%,
+  50% {
+    box-shadow: 0 0 0 0 #fff;
+    opacity: 0;
   }
   100% {
-    opacity: 0;
-    transform: translateX(300px);
-  }
-}
-
-@-webkit-keyframes lol {
-  0% {
-    opacity: 0;
-    -webkit-transform: translateX(-300px);
-  }
-  33% {
+    box-shadow: 0 0 0 1.7rem #fff;
     opacity: 1;
-    -webkit-transform: translateX(0px);
   }
-  66% {
-    opacity: 1;
-    -webkit-transform: translateX(0px);
-  }
-  100% {
-    opacity: 0;
-    -webkit-transform: translateX(300px);
-  }
-}
-
-.cs-loader-inner label:nth-child(6) {
-  -webkit-animation: lol 3s infinite ease-in-out;
-  animation: lol 3s infinite ease-in-out;
-}
-
-.cs-loader-inner label:nth-child(5) {
-  -webkit-animation: lol 3s 100ms infinite ease-in-out;
-  animation: lol 3s 100ms infinite ease-in-out;
-}
-
-.cs-loader-inner label:nth-child(4) {
-  -webkit-animation: lol 3s 200ms infinite ease-in-out;
-  animation: lol 3s 200ms infinite ease-in-out;
-}
-
-.cs-loader-inner label:nth-child(3) {
-  -webkit-animation: lol 3s 300ms infinite ease-in-out;
-  animation: lol 3s 300ms infinite ease-in-out;
-}
-
-.cs-loader-inner label:nth-child(2) {
-  -webkit-animation: lol 3s 400ms infinite ease-in-out;
-  animation: lol 3s 400ms infinite ease-in-out;
-}
-
-.cs-loader-inner label:nth-child(1) {
-  -webkit-animation: lol 3s 500ms infinite ease-in-out;
-  animation: lol 3s 500ms infinite ease-in-out;
 }
 
 /*------------For mobile phones------------*/
