--- a/css/style.css
+++ b/css/style.css
@@ -552,35 +552,54 @@ a:hover {
   align-items: center;
 }
 #loader {
-  width: 70px;
-  height: 70px;
-  border-style: solid;
-  border-top-color: #fff;
-  border-right-color: #fff;
-  border-left-color: transparent;
-  border-bottom-color: transparent;
-  border-radius: 50%;
-  box-sizing: border-box;
-  animation: rotate 3s ease-in-out infinite;
-  transform: rotate(-200deg);
+  /* Uncomment this to make it run! */
+
+  /*      animation: loader 5s linear infinite;  */
+
+  position: absolute;
+  top: calc(50% - 20px);
+  left: calc(50% - 20px);
 }
-@keyframes rotate {
+@keyframes loader {
   0% {
-    border-width: 10px;
-  }
-  25% {
-    border-width: 3px;
-  }
-  50% {
-    transform: rotate(115deg);
-    border-width: 10px;
-  }
-  75% {
-    border-width: 3px;
+    left: -100px;
   }
   100% {
-    border-width: 10px;
+    left: 110%;
   }
+}
+#box {
+  width: 50px;
+  height: 50px;
+  background: #fff;
+  animation: animate 0.5s linear infinite;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 3px;
+}
+@keyframes animate {
+  17% {
+    border-bottom-right-radius: 3px;
+  }
+  25% {
+    transform: translateY(9px) rotate(22.5deg);
+  }
+  50% {
+    transform: translateY(18px) scale(1, 0.9) rotate(45deg);
+    border-bottom-right-radius: 40px;
+  }
+  75% {
+    transform: translateY(9px) rotate(67.5deg);
+  }
+  100% {
+    transform: translateY(0) rotate(90deg);
+  }
+}
+
+body {
+  background: black;
+  overflow: hidden;
 }
 
 /*------------For mobile phones------------*/
