--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #000;
   font-family: "Roboto", sans-serif;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 * {
@@ -540,34 +540,16 @@ a:hover {
   }
 }
 /*------------Loader------------*/
-.loader-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 #loader {
-  /* Uncomment this to make it run! */
-
-  /*      animation: loader 5s linear infinite;  */
-
-  position: absolute;
-  top: calc(50% - 20px);
-  left: calc(50% - 20px);
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  z-index: 999;
+  overflow: visible;
+  background: #000 url("../logo.gif") no-repeat center center;
 }
-@keyframes loader {
-  0% {
-    left: -100px;
-  }
-  100% {
-    left: 110%;
-  }
-}
+
 #box {
   width: 50px;
   height: 50px;
