--- a/css/style.css
+++ b/css/style.css
@@ -541,13 +541,33 @@ a:hover {
 }
 /*------------Loader------------*/
 
-#loader {
-  position: fixed;
+.loader-wrapper {
   width: 100%;
-  height: 100vh;
-  z-index: 999;
-  overflow: visible;
-  background: #000 url("../logo.gif") no-repeat center center;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#loader {
+  /* Uncomment this to make it run! */
+
+  /*      animation: loader 5s linear infinite;  */
+
+  position: absolute;
+  top: calc(50% - 20px);
+  left: calc(50% - 20px);
+}
+@keyframes loader {
+  0% {
+    left: -100px;
+  }
+  100% {
+    left: 110%;
+  }
 }
 
 #box {
