--- a/css/style.css
+++ b/css/style.css
@@ -554,23 +554,13 @@ a:hover {
 }
 /*------------Loader------------*/
 #loading {
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
   position: fixed;
-  display: block;
-  opacity: 0.7;
-  background-color: black;
-  z-index: 99;
-  text-align: center;
-}
-
-#loading-image {
-  position: absolute;
-  top: 100px;
-  left: 240px;
-  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  z-index: 999;
+  overflow: visible;
+  opacity: 0.8;
+  background: #000 url("../logo.gif") no-repeat center center;
 }
 
 /*------------For mobile phones------------*/
